<project  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Spectrum IDEDOS Hard drive file viewer/editor</name>
	<groupId>SpecImgManipulator</groupId>
	<artifactId>SpecImgManipulator</artifactId>
	<version>1.9</version>
	<description>SpecImgManipulator
		This program allows you to edit spectrum +3 hard disk images in either Raw or Realsoft HDF format, TAP, TZX and most floppy types. 
	</description>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.class>hddEditor.ui.HDDEditor</main.class>
		<swt.version>4.6</swt.version>
		<swt.arch>gtk.linux.x86_64</swt.arch>
		<final.name>HDDFileEditor</final.name>
		<final.arch>linux-86_64</final.arch>
	</properties> 

	<developers>
		<developer>
			<name>Graham Salkin</name>
			<email>graham@salkin.co.uk</email>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>maven-eclipse-repo</id>
			<url>https://maven-eclipse.github.io/maven</url>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.${swt.arch}</artifactId>
			<version>${swt.version}</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${final.name}-${final.arch}</finalName>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>${main.class}</Main-Class>
									</manifestEntries>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>org.eclipse.*:*</artifact>
									<excludes>
										<exclude>META-INF/*.MF</exclude>
										<exclude>about_files/IJG_README</exclude>
										<exclude>about.html</exclude>
										<exclude>.api_description</exclude>
									</excludes>
								</filter>
						   		<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
								   		<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
					</compilerArgs>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
						<id>compile</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${basedir}/src</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>2.0-beta-7</version>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
</project>